# character-ai-tg-bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/amplitude_client/: __init__.py  amplitude_client.py
app/bot/: __init__.py  bot.py
app/bot/filters/: __init__.py  is_not_command.py
app/bot/handlers/: commands.py  conversation.py
app/bot/keyboards/: __init__.py  choose_character.py
app/bot/middlewares/: __init__.py  authentication_middleware.py  database_session_middleware.py
app/bot/routers/: __init__.py  commands.py  conversation.py
app/database/: __init__.py  postgres.py  test_data.py
app/database/dal/: __init__.py  base_dal.py  character_dal.py  conversation_dal.py  conversation_request_dal.py  user_dal.py
app/database/models/: __init__.py  base_model.py  character.py  conversation.py  conversation_request.py  user.py
app/open_ai/: __init__.py  open_ai.py  pydantic_models.py
app/redis/: __init__.py  redis.py
app/utils/: singleton_meta.py
app/web/: __init__.py  web_app.py
app/web/dependencies/: __init__.py  amplitude_client.py  bot.py  database.py  templates.py
app/web/routers/: __init__.py  webapp_router.py
app/web/schemas/: __init__.py  create_character.py  decorators.py
app/web/static/css/: form.css  styles.css
app/web/templates/: base.html  character_card.html  choose_character.html  create_character.html
config/: config.py  dist.env
migrations/: env.py
migrations/versions/: ab541e118452_.py  c3dbf520901c_.py
(+2 files in other folders)
